--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: pmc2nc
 Type: Package
 Title: PubMed Central Citation Network Construction
 Version: 1.0
-Date: 2018-11-08
-Author: Garrett M. Dancik and Anayancy Ramos 
+Date: 2018-12-19
+Author: Garrett M. Dancik, Myron Zhang, and Anayancy Ramos 
 Maintainer: Garrett Dancik <dancikg@easternct.edu>
 Description: Retrieves PMC citations and genenerates edge lists for PMC citation networks 
 License: GPL (>= 2)
