--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,11 @@ export(create_date_table)
 export(create_edge_list_table)
 export(edge_list_expansion)
 export(filterEdgeList)
-export(find_pmids_not_in_db)
 export(generateEdgeList)
 export(getCitationCounts)
 export(get_pmc_cited_in)
-export(get_pmids_date)
+export(get_pmids_by_date)
 export(insertEdgeList)
 export(isDate)
 export(retrieveEdgeList)
+export(updateLastUpdatedTable)
