--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(edge_list_expansion)
 export(filterEdgeList)
 export(generateEdgeList)
 export(getCitationCounts)
+export(get_article_info)
 export(get_pmc_cited_in)
 export(get_pmids_by_date)
 export(insertEdgeList)
