--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: pmc2nc
 Type: Package
 Title: PubMed Central Citation Network Construction
-Version: 1.01
-Date: 2019-03-10
+Version: 1.02
+Date: 2019-03-31
 Author: Garrett M. Dancik, Myron Zhang, and Anayancy Ramos 
 Maintainer: Garrett Dancik <dancikg@easternct.edu>
-Description: Retrieves PMC citations and genenerates edge lists for PMC citation networks 
+Description: Retrieves PMC citations and genenerates edge lists for PMC citation networks. 
 License: GPL (>= 2)
 LazyData: true
-Depends:
+Imports:
     rentrez,
     progress,
     dplyr
+Suggests:
+    RMariaDB
 RoxygenNote: 6.1.1
